# claude-create-lengangue

./: AGENT.md
ExkutorLang/: .gitignore  CMakeLists.txt  README.md  __init__.py  build.py  exkutor.py  push_release.py
ExkutorLang/bindings/: CMakeLists.txt  exkutor_bindings.cpp
ExkutorLang/core_execution/: CMakeLists.txt
ExkutorLang/core_execution/include/: executor.h
ExkutorLang/core_execution/sanitizer/: sanitizer.cpp  sanitizer.h
ExkutorLang/core_execution/src/: executor.cpp
ExkutorLang/docs/: setup_guide.md  syntax_reference.md  usage_examples.md
ExkutorLang/pipeline/: error_types.py  logger.py
ExkutorLang/scripting_parser/: __init__.py  lexer.py  parser.py  runtime.py  semantic.py
ExkutorLang/tests/: run_tests.py
ExkutorLang/tests/powershell/: test_basic_io.exkutor  test_chained.exkutor  test_file_ops.exkutor
ExkutorLang/tests/wsl/: test_basic_io.exkutor  test_chained.exkutor  test_file_ops.exkutor
