cmake_minimum_required(VERSION 3.20)
project(exkutor_core LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(MSVC)
    add_compile_options(/W4 /WX)
else()
    add_compile_options(-Wall -Wextra -Werror)
endif()
add_library(exkutor_core SHARED src/executor.cpp sanitizer/sanitizer.cpp)
target_include_directories(exkutor_core PUBLIC include)
